--- a/WebVisualization/fig2.html
+++ b/WebVisualization/fig2.html
@@ -16,7 +16,6 @@
 <body>
 
   <div class="topnav">
-    <ul>
     <a class="active" href="index.html">Latitude</a>
     <div class="topnav-right">
       <div class="dropdown">
@@ -24,7 +23,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="fig1.html">Max Temperature</a>
+          <a href="fig1.html">Temperature</a>
           <a href="fig2.html">Humidity</a>
           <a href="fig3.html">Cloudiness</a>
           <a href="fig4.html">Wind Speed</a>
@@ -32,22 +31,21 @@
       </div> 
       <a href="comparison.html">Comparison</a>
       <a href="data.html">Data</a>
-      </div>
-    </ul>
+    </div>
   </div>
+
+
 
   <div class="container">
     <div class="row">
       <div class="col-md-6">
         <section id="figure">
-          <h2 id="sub-title">Summary: Latitud vs. X</h2>
-          <img id="visualization1" src="assets/images/Fig1.png" width="300" ALIGN ="left"/>
+          <h2 id="sub-title">Humidity</h2>
+          <img id="visualization1" src="assets/images/Fig2.png" width="300"/>
         </section>
-          <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+          <p>Add description here.
           </p>
-          <p>
-          After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitud. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed
-          </p>
+          
       </div>
       <div class="col-md-6">
         <h2>Visualizations</h2>
